--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,8 @@
             <div class="container">
                 <a class="navbar-brand" href="/posts">Navbar</a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                    aria-expanded="false" aria-label="Toggle navigation"></button>
+                    aria-expanded="false" aria-label="Toggle navigation">
+                </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item">
