finished comments on show page feature

--- a/views/Comments/new.ejs
+++ b/views/Comments/new.ejs
@@ -1,7 +1,7 @@
 <%-include ('../partials/header')%>
 
 
-<div class="container d-flex justify-content-center">
+<!-- <div class="container d-flex justify-content-center">
     <form class="w-50" action="/posts/<%=id%>/comments" method="POST">
         <h1 class="text-center mb-5">Novo Comentário</h1>
         <div class="form-group">
@@ -9,4 +9,4 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-</div>
+</div> -->
