I've made the sign-in page design

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
             <img class="w-75" src="https://images.pexels.com/photos/2437291/pexels-photo-2437291.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
         </div>
         <form class="col-lg-6" action="/register" method="POST">
+            <h1>Sign Up! </h1>
             <div class="form-group">
                 <label for="exampleInputPassword1">Full Name</label>
                 <input type="text" name="name" class="form-control" placeholder="Arya Stark">
