--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,12 +23,21 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <%if(user){%>
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Login</a>
+                            <a class="nav-link" href="/login">Olá <%=user.username%></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/register">Register</a>
+                            <a class="nav-link" href="/logout">Logout</a>
                         </li>
+                    <%}else{%>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">SignIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">SignUp</a>
+                        </li>
+                    <%}%>
                     </ul>
                 </div>
             </div>
