--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,7 +15,7 @@
         <!-- Author -->
         <p class="lead">
           by
-          <a href="#">Start Bootstrap</a>
+          <a href="#"><%=data.author%></a>
         </p>
 
         <hr>
@@ -54,7 +54,7 @@
           <div class="media mb-4">
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
             <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
+              <h5 class="mt-0"><%=item.author%></h5>
               <%=item.comment%>
             </div>
           </div>
