--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,6 +43,13 @@
             </div>
         </nav>
 
-        <% if (error_messages && error_messages.length > 0){ %>
-            <p>Olá</p>
+        <%if(error && error.length>0){%>
+            <div class="container alert alert-danger" role="alert">
+                <%=error%>
+          </div>
+        <%}%>
+        <% if(success && success.length > 0){ %>
+            <div class="container alert alert-success" role="alert">
+                <%=success%>
+          </div> 
         <%}%>
