--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,8 +18,12 @@
             <a href="#"><%=data.author%></a>
           </p>
           <div class="ml-auto">
-            <button type="button" class="btn btn-outline-secondary btn-sm">Edit</button>
-            <button type="button" class="btn btn-outline-danger btn-sm">Delete</button>
+            <a href="/posts/<%=data._id%>/edit">
+              <button type="button" class="btn btn-outline-secondary btn-sm">Edit</button>
+            </a>
+            <form class="d-inline" action="/posts/<%=data._id%>">
+              <button type="button" class="btn btn-outline-danger btn-sm">Delete</button>
+            </form>
           </div>
         </div>
         
