refactored views and routes

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header')%>
+<%- include('../partials/header')%>
 
     <div class="container d-flex justify-content-center">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -44,5 +44,5 @@
       
     </div>
 
-<%- include ('partials/footer')%>
+<%- include ('../partials/footer')%>
     
