--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,8 @@
 .myDiv:hover .hide{
     display: block;
 }
+
+.zoom:hover{
+    transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transition: all .5s ease;
+}
