--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -32,7 +32,7 @@
     <!-- Dynamically created cards -->
     <div class="card-columns container mt-3">
       <%for(item of data){%>
-        <div class="card">
+        <div class="card zoom">
           <a href="/posts/<%=item._id%>"><img src=<%=item.image%> class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title"><%=item.title%></h5>
