started adding functions for fadein/out aiming action buttons

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header')%>
 
-    <div class="container d-flex justify-content-center">
+    <div class="container d-flex justify-content-center test">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
