--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,10 @@
     display:none;
 }
 
-.myDiv:hover .hide{
+/* 
+.actions:hover .hide{
     display: block;
-}
+} */
 
 .zoom:hover{
     transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
