added timestamp at show page

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -35,7 +35,7 @@
         <div class="card zoom">
           <a href="/posts/<%=item._id%>"><img src=<%=item.image%> class="card-img-top" alt="..."></a>
           <div class="card-body">
-            <h5 class="card-title"><%=item.title%></h5>
+            <h5 class="card-title text-truncate"><%=item.title%></h5>
             <p class="card-text text-truncate"><%=item.description%></p>
           </div>
         </div>
