--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -12,25 +12,39 @@
         <!-- Title -->
         <h1 class="mt-4"><%=data.title%></h1>
         <!-- Author -->
-        <div class="d-flex m-0 postHead">
+        <div class="d-flex m-0 actions">
           <p class="lead">
             by
             <a href="#"><%=data.author.username%></a>
           </p>
           <%if(data.author.id.equals(user.id)){%>
             <div class="ml-auto hide">
-              <button type="button" class="btn btn-outline-secondary btn-sm "><a href="/posts/<%=data._id%>/edit">Edit</a></button>
+              <a href="/posts/<%=data._id%>/edit" type="button" class="btn btn-outline-secondary btn-sm">Edit</a>
               <form class="d-inline" action="/posts/<%=data._id%>?_method=DELETE" method="POST">
-                <button type="submit" class="btn btn-outline-danger btn-sm hide">Delete</button>
+                <button type="submit" class="btn btn-outline-danger btn-sm">Delete</button>
               </form>
             </div>
           <%}%>
         </div>
         
-        <hr>
+       
 
         <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
+        <%
+          const monthsName = [
+            "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
+            "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
+          ]
+          const weekDays = [
+            "Domingo", "Segunda", "Terça", "Quarta", "Quinta", "Sexta", "Sábado"
+          ]
+          const w = weekDays[data.date.getDay()];
+          const d = data.date.getDate();
+          const m = monthsName[data.date.getMonth()];
+          const y = data.date.getFullYear();
+        %>
+
+        <small><%= w + ", " + d + " de " +  m + " de " + y  %></small>
         <hr>
 
         <!-- Preview Image -->
@@ -61,13 +75,13 @@
         <%for(item of data.comments){%>
           <div class="media mb-4">
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body myDiv">
+            <div class="media-body actions">
               <h5 class="mt-0"><%=item.author.username%></h5>
               <p><%=item.comment%></p>
 
               <%if(item.author.id.equals(user.id)){%>
                 <div class="hide">
-                  <button type="button" class="btn btn-outline-secondary btn-sm mr-1"><a href="/posts/<%=data._id%>/comments/<%=item._id%>/edit">Edit</a></button>
+                  <a href="/posts/<%=data._id%>/comments/<%=item._id%>/edit" type="button" class="btn btn-outline-secondary btn-sm">Edit</a>
                   <form class="d-inline" action="/posts/<%=data._id%>/comments/<%=item._id%>?_method=DELETE" method="POST">
                     <button type="submit" class="btn btn-outline-danger btn-sm">Delete</button>
                   </form>
