--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,12 +2,12 @@
     display:none;
 }
 
-/* 
+
 .actions:hover .hide{
-    display: block;
-} */
+    display: inline;
+}
 
 .zoom:hover{
-    transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.01); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     transition: all .5s ease;
 }
