--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,9 @@
     <body>
         <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
             <div class="container">
-                <a class="navbar-brand" href="/posts"><i class="fab fa-500px"></i></a>
+                <a class="navbar-brand" href="/posts">
+                    <i class="fas fa-camera-retro fa-2x"></i>
+                </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
                 </button>
@@ -21,7 +23,9 @@
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <%if(user){%>
                         <li class="nav-item">
-                            <a class="nav-link" href="/posts/new">Novo</a>
+                            <a class="nav-link" href="/posts/new">
+                                <i class="far fa-plus-square fa-2x"></i>
+                            </a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
