--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -19,3 +19,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+
+<%- include ('../partials/footer') %>
